add trainer list command